--- a/services.html
+++ b/services.html
@@ -26,48 +26,46 @@
 
   <!-- Pricing Plans -->
   <section class="services-plans">
-    <h2>Pricing Plans</h2>
-    <div class="service-cards">
-      <div class="card">
-        <h3>Starter</h3>
-        <p>Perfect for individuals or small businesses</p>
-        <ul>
-          <li>1-page scroll website</li>
-          <li>Mobile-first design</li>
-          <li>Contact form integration</li>
-          <li>1 round of revisions</li>
-          <li>Basic SEO setup</li>
-        </ul>
-        <span>$199</span>
-      </div>
-      <div class="card">
-        <h3>Business</h3>
-        <p>Ideal for growing companies needing a web presence</p>
-        <ul>
-          <li>Up to 6 custom pages</li>
-          <li>Custom responsive layout</li>
-          <li>Email capture & newsletter setup</li>
-          <li>Blog or portfolio module</li>
-          <li>2 rounds of revisions</li>
-          <li>Speed optimization</li>
-        </ul>
-        <span>$499</span>
-      </div>
-      <div class="card">
-        <h3>Enterprise</h3>
-        <p>For full-scale business solutions with custom needs</p>
-        <ul>
-          <li>Unlimited pages</li>
-          <li>Animations and transitions</li>
-          <li>Custom integrations (APIs, CRM, Databases)</li>
-          <li>Admin backend (optional)</li>
-          <li>Ongoing support plan</li>
-          <li>Advanced SEO + analytics setup</li>
-        </ul>
-        <span>$999+</span>
-      </div>
+  <h2>Pricing Plans</h2>
+  <div class="service-cards">
+    <div class="card">
+      <h3>Starter</h3>
+      <p>Perfect for individuals or small businesses</p>
+      <ul>
+        <li>One-page website</li>
+        <li>Mobile-friendly design</li>
+        <li>Basic SEO setup</li>
+      </ul>
+      <span>$150</span>
     </div>
-  </section>
+    <div class="card">
+      <h3>Business</h3>
+      <p>Ideal for growing companies needing a web presence</p>
+      <ul>
+        <li>Up to 5 pages</li>
+        <li>Mobile-friendly design</li>
+        <li>Custom responsive layout</li>
+        <li>Speed optimization</li>
+        <li>Advanced SEO setup</li>
+        <li>Basic animations and transitions</li>
+      </ul>
+      <span>$300</span>
+    </div>
+    <div class="card">
+      <h3>Enterprise</h3>
+      <p>For full-scale business solutions with custom needs</p>
+      <ul>
+        <li>Up to 15 unique pages</li>
+        <li>Mobile-friendly design</li>
+        <li>Advanced SEO + analytics setup</li>
+        <li>Advanced animations and transitions</li>
+        <li>Admin backend (optional)</li>
+        <li>Custom integrations (APIs, CRM, Databases)</li>
+      </ul>
+      <span>$450</span>
+    </div>
+  </div>
+</section>
 
   <!-- Services Grid -->
   <section class="features services-grid">
