--- a/contact.html
+++ b/contact.html
@@ -24,16 +24,14 @@
   </section>
 
   <!-- Contact Form -->
-  <section class="contact-form">
-    <h2>Send Us a Message</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <input type="text" placeholder="Phone (optional)" />
-      <textarea placeholder="Your Message" rows="6" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+ <form action="https://formspree.io/f/xnnzjolw" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="email" name="email" placeholder="Your Email" required />
+  <input type="text" name="phone" placeholder="Phone (optional)" />
+  <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
+  <button type="submit">Send Message</button>
+</form>
+
 
   <!-- Office Info -->
   <section class="office-info">
