--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,15 @@
   </section>
 
   <!-- Contact Form -->
-<form action="https://formspree.io/f/myzpkboy" method="POST">
-  <input type="text" name="name" placeholder="Your Name" required />
-  <input type="email" name="email" placeholder="Your Email" required />
-  <input type="text" name="phone" placeholder="Phone (optional)" />
-  <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
-  <button type="submit">Send Message</button>
+<section class="contact-form">
+  <form action="https://formspree.io/f/myzpkboy" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required />
+    <input type="email" name="email" placeholder="Your Email" required />
+    <input type="text" name="phone" placeholder="Phone (optional)" />
+    <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
+    <button type="submit">Send Message</button>
 </form>
+
 
   <!-- Office Info -->
   <section class="office-info">
