--- a/services.html
+++ b/services.html
@@ -25,48 +25,50 @@
   </section>
 
   <!-- Pricing Plans -->
-  <div class="service-cards">
-  <div class="card">
-    <h3>Starter</h3>
-    <p>Perfect for individuals or small businesses</p>
-    <ul>
-      <li>One-page website</li>
-      <li>Mobile-friendly design</li>
-      <li>Basic SEO setup</li>
-    </ul>
-    <div class="price-tag">$150</div>
-  </div>
+  <section class="services-plans">
+    <h2>Pricing Plans</h2>
+    <div class="service-cards">
+      <div class="card">
+        <h3>Starter</h3>
+        <p>Perfect for individuals or small businesses</p>
+        <ul>
+          <li>One-page website</li>
+          <li>Mobile-friendly design</li>
+          <li>Basic SEO setup</li>
+        </ul>
+        <div class="price-tag">$150</div>
+      </div>
 
-  <div class="card">
-    <h3>Business</h3>
-    <p>Ideal for growing companies needing a web presence</p>
-    <ul>
-      <li>Up to 5 pages</li>
-      <li>Mobile-friendly design</li>
-      <li>Custom responsive layout</li>
-      <li>Speed optimization</li>
-      <li>Advanced SEO setup</li>
-      <li>Basic animations and transitions</li>
-    </ul>
-    <div class="price-tag">$300</div>
-  </div>
+      <div class="card">
+        <h3>Business</h3>
+        <p>Ideal for growing companies needing a web presence</p>
+        <ul>
+          <li>Up to 5 pages</li>
+          <li>Mobile-friendly design</li>
+          <li>Custom responsive layout</li>
+          <li>Speed optimization</li>
+          <li>Advanced SEO setup</li>
+          <li>Basic animations and transitions</li>
+        </ul>
+        <div class="price-tag">$300</div>
+      </div>
 
- <div class="card best-option">
-  <div class="badge">Best Value</div>
-  <h3>Enterprise</h3>
-  <p>For full-scale business solutions with custom needs</p>
-  <ul>
-    <li>Up to 15 unique pages</li>
-    <li>Mobile-friendly design</li>
-    <li>Advanced SEO + analytics setup</li>
-    <li>Advanced animations and transitions</li>
-    <li>Admin backend (optional)</li>
-    <li>Custom integrations (APIs, CRM, Databases)</li>
-  </ul>
-  <div class="price-tag">$450</div>
-</div>
-
-
+      <div class="card best-option">
+        <div class="badge">Best Value</div>
+        <h3>Enterprise</h3>
+        <p>For full-scale business solutions with custom needs</p>
+        <ul>
+          <li>Up to 15 unique pages</li>
+          <li>Mobile-friendly design</li>
+          <li>Advanced SEO + analytics setup</li>
+          <li>Advanced animations and transitions</li>
+          <li>Admin backend (optional)</li>
+          <li>Custom integrations (APIs, CRM, Databases)</li>
+        </ul>
+        <div class="price-tag">$450</div>
+      </div>
+    </div>
+  </section>
 
   <!-- Services Grid -->
   <section class="features services-grid">
