--- a/services.html
+++ b/services.html
@@ -119,7 +119,7 @@
       </div>
       <div class="faq-item">
         <h4>Will my site be mobile-friendly?</h4>
-        <p>Absolutely. Every project is mobile-first and tested across devices.</p>
+        <p>Absolutely. Every project is mobile-friendly and tested across devices.</p>
       </div>
     </div>
   </section>
