--- a/contact.html
+++ b/contact.html
@@ -24,35 +24,28 @@
   </section>
 
   <!-- Contact Form -->
-<section class="contact-form">
-  <form action="https://formspree.io/f/myzpkboy" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <input type="text" name="phone" placeholder="Phone (optional)" />
-    <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
-    <button type="submit">Send Message</button>
-</form>
-
+  <section class="contact-form">
+    <form action="https://formspree.io/f/myzpkboy" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <input type="text" name="phone" placeholder="Phone (optional)" />
+      <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 
   <!-- Office Info -->
   <section class="office-info">
     <h2>Our Office</h2>
-    <div class="office-details">
-      <div>
-        <h4>Address</h4>
-        <p>123 Digital Drive<br>San Diego, CA 92121</p>
-      </div>
+    <div class="office-details" style="display: flex; justify-content: center; align-items: center; gap: 4rem;">
       <div>
         <h4>Hours</h4>
         <p>Mon–Fri: 9am – 5pm<br>Sat–Sun: Closed</p>
       </div>
       <div>
         <h4>Email & Phone</h4>
-        <p>hello@webder.agency<br>(858) 555-1234</p>
+        <p>webderservices@gmail.com<br>(858) 555-1234</p>
       </div>
-    </div>
-    <div class="map-placeholder">
-      <p>[Google Map Embed Placeholder]</p>
     </div>
   </section>
 
