--- a/contact.html
+++ b/contact.html
@@ -37,14 +37,14 @@
   <!-- Office Info -->
   <section class="office-info">
     <h2>Our Office</h2>
-    <div class="office-details" style="display: flex; justify-content: center; align-items: center; gap: 4rem;">
+    <div class="office-details">
       <div>
         <h4>Hours</h4>
         <p>Mon–Fri: 9am – 5pm<br>Sat–Sun: Closed</p>
       </div>
       <div>
         <h4>Email & Phone</h4>
-        <p>webderservices@gmail.com<br>(858) 555-1234</p>
+        <p>hello@webder.agency<br>(858) 555-1234</p>
       </div>
     </div>
   </section>
