--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
       </div>
       <div>
         <h4>Email & Phone</h4>
-        <p>hello@webder.agency<br>(858) 555-1234</p>
+        <p>webderservices@gmail.com<br>(858) 555-1234</p>
       </div>
     </div>
   </section>
