--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,16 @@
   <title>Contact Us - Webder</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-649KPPD2EP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-649KPPD2EP');
+</script>
+
 </head>
 <body>
   <header class="navbar">
