--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
       </div>
       <div>
         <h4>Email & Phone</h4>
-        <p>webderservices@gmail.com<br>(858) 555-1234</p>
+        <p>webderservices@gmail.com<br>(442) 359-7553</p>
       </div>
     </div>
   </section>
@@ -64,16 +64,16 @@
     <h2>Meet Our Team</h2>
     <div class="team-grid">
       <div class="team-member">
-        <h4>Alex Tran</h4>
-        <p>Lead Designer</p>
+        <h4>Colt Mattingley</h4>
+        <p>Lead Marketer</p>
       </div>
       <div class="team-member">
-        <h4>Maria Garcia</h4>
-        <p>Frontend Developer</p>
+        <h4>Dylan Carlin</h4>
+        <p>Lead Website Designer</p>
       </div>
       <div class="team-member">
-        <h4>Devon Kim</h4>
-        <p>Client Success Manager</p>
+        <h4>Max Mattingley</h4>
+        <p>Business Administrator</p>
       </div>
     </div>
   </section>
