--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
       </div>
       <div class="team-member">
         <h4>Dylan Carlin</h4>
-        <p>Lead Website Designer</p>
+        <p>Lead Website creator</p>
       </div>
       <div class="team-member">
         <h4>Max Mattingley</h4>
