--- a/services.html
+++ b/services.html
@@ -1,151 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Services - Webder</title>
-  <link rel="stylesheet" href="styles.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <script defer src="scripts.js"></script>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-649KPPD2EP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FZXC8WBDZG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-649KPPD2EP');
-</script>
-
+    gtag('config', 'G-FZXC8WBDZG');
+  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Webder Forms | Pricing &amp; Plans</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <header class="navbar">
-    <div class="logo">Webder</div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="contact.html">Contact</a>
+  <header class="header">
+    <nav class="navbar">
+      <div class="logo">Formder</div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html" class="active">Plans</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </nav>
+    <div class="hero">
+      <h1 class="hero-title">Pricing Plans</h1>
+      <p class="hero-sub">Simple, scalable, and packed with value.</p>
+    </div>
   </header>
 
-  <!-- Hero -->
-  <section class="services-hero">
-    <h1>Services Built to Scale Your Business</h1>
-    <p>From startups to enterprises, our web design packages cover everything you need to succeed online.</p>
-  </section>
+  <main>
+    <section class="features reveal">
+      <h2>Choose Your Level</h2>
+      <div class="features-grid">
 
-  <!-- Pricing Plans -->
-  <section class="services-plans">
-    <h2>Pricing Plans</h2>
-    <div class="service-cards">
-      <div class="card">
-        <h3>Starter</h3>
-        <p>Perfect for individuals or small businesses</p>
-        <p> .  .  . </p>
-        <ul>
-          <li>One-page website</li>
-          <li>Mobile-friendly design</li>
-          <li>Basic SEO setup</li>
-        </ul>
-        <div class="price-tag">$150</div>
-      </div>
+        <div class="feature-card">
+          <h3>🚀 Starter</h3>
+          <p><strong>$49</strong> / one-time</p>
+          <ul>
+            <li>✓ 1 Custom Survey</li>
+            <li>✓ 1 Branded QR Code</li>
+            <li>✓ Setup & Delivery</li>
+            <li>✓ Email Setup</li>
+          </ul>
+        </div>
 
-      <div class="card">
-        <h3>Business</h3>
-        <p>Ideal for growing companies needing a web presence</p>
-        <p><b> . . . </b></p>
-        <ul>
-          <li>Up to 5 pages</li>
-          <li>Mobile-friendly design</li>
-          <li>Custom responsive layout</li>
-          <li>Speed optimization</li>
-          <li>Advanced SEO setup</li>
-          <li>Basic animations and transitions</li>
-        </ul>
-        <div class="price-tag">$300</div>
-      </div>
+        <div class="feature-card">
+          <h3>⚡ Pro</h3>
+          <p><strong>$129</strong> / one-time</p>
+          <ul>
+            <li>✓ Up to 5 Surveys</li>
+            <li>✓ Custom QR Styles (color, logo)</li>
+            <li>✓ Priority Delivery</li>
+            <li>✓ Dedicated Email Inbox</li>
+          </ul>
+        </div>
 
-      <div class="card best-option">
-        <div class="badge">Best Value</div>
-        <h3>Enterprise</h3>
-        <p>For full-scale business solutions with custom needs</p>
-        <p><b>.  .  .</b></p>
-        <ul>
-          <li>Up to 15 unique pages</li>
-          <li>Mobile-friendly design</li>
-          <li>Advanced SEO + analytics setup</li>
-          <li>Advanced animations and transitions</li>
-          <li>Admin backend (optional)</li>
-          <li>Custom integrations (APIs, CRM, Databases)</li>
-        </ul>
-        <div class="price-tag">$450</div>
-      </div>
-    </div>
-  </section>
+        <div class="feature-card best-option">
+          <div class="badge">Best Value</div>
+          <h3>🔥 Ultimate</h3>
+          <p><strong>$249</strong> / one-time</p>
+          <ul>
+            <li>✓ Unlimited Forms</li>
+            <li>✓ Animated QR Code Options</li>
+            <li>✓ Monthly Reporting Add-on</li>
+            <li>✓ Ongoing Support</li>
+          </ul>
+        </div>
 
-  <!-- Services Grid -->
-  <section class="features services-grid">
-    <h2>What’s Included</h2>
-    <div class="features-grid">
-      <div class="feature-card">
-        <h4>Responsive Design</h4>
-        <p>Optimized for mobile, tablet, and desktop experiences.</p>
       </div>
-      <div class="feature-card">
-        <h4>SEO Foundations</h4>
-        <p>We follow on-page SEO best practices from day one.</p>
-      </div>
-      <div class="feature-card">
-        <h4>Performance Optimization</h4>
-        <p>Fast load times and Google Lighthouse compliance.</p>
-      </div>
-      <div class="feature-card">
-        <h4>Custom CMS Integration</h4>
-        <p>Manage your own content with WordPress or headless CMS.</p>
-      </div>
-      <div class="feature-card">
-        <h4>Email & Forms</h4>
-        <p>Connected contact forms, lead generation, and automations.</p>
-      </div>
-      <div class="feature-card">
-        <h4>Hosting & Deployment</h4>
-        <p>We assist with deploying your site to trusted cloud providers.</p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- FAQ Section -->
-  <section class="faq">
-    <h2>Frequently Asked Questions</h2>
-    <div class="faq-list">
-      <div class="faq-item">
-        <h4>How long does a project take?</h4>
-        <p>Starter sites take 3–5 days. Business and Enterprise projects can take 1–3 weeks depending on scope and revisions.</p>
-      </div>
-      <div class="faq-item">
-        <h4>What technologies do you use?</h4>
-        <p>We build with HTML, CSS, JS, and integrate frameworks like React, WordPress, or custom stacks as needed.</p>
-      </div>
-      <div class="faq-item">
-        <h4>Do you offer maintenance?</h4>
-        <p>Yes! Our Enterprise package includes ongoing support. We also offer monthly maintenance plans.</p>
-      </div>
-      <div class="faq-item">
-        <h4>Will my site be mobile-friendly?</h4>
-        <p>Absolutely. Every project is mobile-friendly and tested across devices.</p>
-      </div>
-    </div>
-  </section>
+    <section class="quote-section reveal">
+      <blockquote>
+        “The QR code was so on-brand it looked like part of our packaging. Customers love it!”
+      </blockquote>
+      <cite>— Happy Formder Client</cite>
+    </section>
 
-  <!-- CTA -->
-  <section class="cta-banner">
-    <h2>Let’s Build Your Next Web Experience</h2>
-    <p>Contact us to get a free quote or request a discovery call.</p>
-    <a href="contact.html" class="cta-btn dark">Request a Quote</a>
-  </section>
+    <section class="highlight reveal">
+      <h2>Not sure what plan fits your biz?</h2>
+      <a href="contact.html" class="cta-btn alt">Talk to Us</a>
+    </section>
+  </main>
 
   <footer>
-    <p>&copy; 2025 Webder. All rights reserved.</p>
+    <p>📧 webderservices@gmail.com | 📞 442-359-7553</p>
+    <p>© 2025 Formder. All rights reserved.</p>
   </footer>
 </body>
 </html>
