--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script defer src="scripts.js"></script>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-649KPPD2EP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-649KPPD2EP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-649KPPD2EP');
-</script>
-
+    gtag('config', 'G-649KPPD2EP');
+  </script>
 </head>
 <body>
   <header class="navbar">
@@ -59,10 +58,10 @@
     </div>
   </section>
 
-  <!-- Features -->
+  <!-- Why Choose Us -->
   <section class="features">
     <h2>Why Choose Us?</h2>
-    <div class="features-grid">
+    <div class="features-grid four-wide">
       <div class="feature-card">
         <h4>Custom Designs</h4>
         <p>Stand out with designs made specifically for your brand and customers.</p>
