--- a/services.html
+++ b/services.html
@@ -8,15 +8,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script defer src="scripts.js"></script>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-649KPPD2EP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-649KPPD2EP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-649KPPD2EP');
-</script>
-
+    gtag('config', 'G-649KPPD2EP');
+  </script>
 </head>
 <body>
   <header class="navbar">
@@ -86,7 +85,7 @@
   <!-- Services Grid -->
   <section class="features services-grid">
     <h2>What’s Included</h2>
-    <div class="features-grid">
+    <div class="features-grid services-grid">
       <div class="feature-card">
         <h4>Responsive Design</h4>
         <p>Optimized for mobile, tablet, and desktop experiences.</p>
@@ -104,11 +103,11 @@
         <p>Manage your own content with WordPress or headless CMS.</p>
       </div>
       <div class="feature-card">
-        <h4>Email & Forms</h4>
+        <h4>Email &amp; Forms</h4>
         <p>Connected contact forms, lead generation, and automations.</p>
       </div>
       <div class="feature-card">
-        <h4>Hosting & Deployment</h4>
+        <h4>Hosting &amp; Deployment</h4>
         <p>We assist with deploying your site to trusted cloud providers.</p>
       </div>
     </div>
