--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us - Webder</title>
+  <title>Contact Us - WebifySD</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <!-- Google tag (gtag.js) -->
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">Webder</div>
+    <div class="logo">WebifySD</div>
     <nav>
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
@@ -29,7 +29,7 @@
 
   <!-- Hero -->
   <section class="hero contact-hero">
-    <h1>Contact Webder</h1>
+    <h1>Contact WebifySD</h1>
     <p>Let’s bring your digital vision to life. Reach out and start the conversation.</p>
   </section>
 
@@ -79,7 +79,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Webder. All rights reserved.</p>
+    <p>&copy; 2025 WebifySD. All rights reserved.</p>
   </footer>
 </body>
 </html>
